:fix/backend: make CORS dynamic with environment variable