@@ -1,5 +1,6 @@
 package br.com.thallysprojetos.desafio2.configs;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -12,6 +13,9 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
+    @Value("${CORS_ALLOWED_ORIGINS:*}")
+    private String allowedOrigins;
+
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -19,11 +23,17 @@ public class CorsConfig {
 
         config.setAllowCredentials(true);
 
-        config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:4200",
-                "http://localhost:4000",
-                "http://127.0.0.1:4200"
-        ));
+        // Origens permitidas via variável de ambiente
+        // Desenvolvimento: localhost
+        // Produção: URL do frontend no Render
+        if ("*".equals(allowedOrigins)) {
+            // Modo permissivo (desenvolvimento)
+            config.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            // Modo restrito (produção) - aceita múltiplas origens separadas por vírgula
+            List<String> origins = Arrays.asList(allowedOrigins.split(","));
+            config.setAllowedOrigins(origins);
+        }
 
         config.setAllowedHeaders(Arrays.asList(
                 "Origin",
